[project]
name = "gvi-jax-tutorial"
description = "GVI JAX Tutorial"
readme = "README.md"
authors = [{ name = "Luca Mungo", email = "luca.mungo@macrocosm.group" }]
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
    "flax",
    "jax==0.5.2",
    "numpyro==0.18.0",
    "tqdm",
    "macrocosm-visual",
]

[project.urls]
Homepage = "https://github.com/lucamungo/jax-gvi"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = ''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
include = ["lotka_volterra.ipynb"]